# ps2_batchkit_rs

./: .gitignore  Cargo.toml
.github/workflows/: build_tools.yml  ci.yml  release.yml
src/: main.rs
src/core/: downloader.rs
src/ps2/: hdl_dump_wrap.rs  mod.rs
