[package]
name = "ps2_batchkit_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1.30", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indicatif = "0.17"
directories = "5.0" # Para detectar %APPDATA% en Windows o ~/.local/share/ en Linux de forma segura